--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -125,6 +125,6 @@
         "title" : "Title",
         "recipes" : "Recipes",
         "content" : "Write  Recipe Text",
-        "most-recent-recipes" : "Most Recent Recipes"
+        "most-recent-recipes" : "Most Viewed Recipes"
     }
 }
